envoy-http-health-check.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
layered_runtime:
  layers:
  - name: default
    static_layer:
      envoy:
        reloadable_features:
          check_unsupported_typed_per_filter_config: true
static_resources:
  listeners:
  - name: my_listener
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 13333
    filter_chains:
    - filters:
      # The HTTP connection manager is the only network filter.
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  path: "/"
                route:
                  cluster: my_cluster
          http_filters:
          - name: envoy.filters.http.health_check
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
              pass_through_mode: true
              cache_time:
                seconds: 10
              headers:
              - name: HEALTHCHECK
                exact_match: CHECK
              cluster_min_healthy_percentages:
                my_cluster:
                  value: 100
          - name: envoy.filters.http.router
  clusters:
  - name: my_cluster
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    protocol_selection: USE_DOWNSTREAM_PROTOCOL
    http2_protocol_options: {}
    health_checks:
    - interval:
        seconds: 1
      timeout:
        seconds: 3
      unhealthy_threshold: 1
      healthy_threshold: 1
      http_health_check:
        path: '/health_check'
    load_assignment:
      cluster_name: my_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 0.0.0.0
                port_value: 33333
